[package]
name = "canopen"
version = "0.1.0"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-can = "0.4"
hashbrown = "0.14"
ini_core = "0.2"
bitfield-struct = "0.5"
bit-struct = "0.3"

[features]
